# spscore

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
recipe/: build.sh  meta.yaml
src/: spscore.cpp  spscore.h
test/: CMakeLists.txt  README.md  test_spscore.cpp
